generate express app

--- a/package.json
+++ b/package.json
@@ -1,27 +1,16 @@
 {
   "name": "daily-sneak-peak-node",
-  "version": "1.0.0",
-  "description": "children activity management app for kindergarten teachers mainly",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MCesarczyk/daily-sneak-peak-node.git"
-  },
-  "keywords": [
-    "kindergarten",
-    "teacher's assistant",
-    "child/group management"
-  ],
-  "author": "Michał Cesarczyk",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/MCesarczyk/daily-sneak-peak-node/issues"
-  },
-  "homepage": "https://github.com/MCesarczyk/daily-sneak-peak-node#readme",
   "dependencies": {
-    "express": "^4.17.3"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
   }
 }
