--- a/Client/public/manifest.json
+++ b/Client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Teacher's assistant frontend",
+  "name": "Frontend part of Teacher's assistant App",
   "icons": [
     {
       "src": "favicon.ico",
