--- a/Client/package.json
+++ b/Client/package.json
@@ -57,5 +57,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest-styled-components": "^7.0.8",
+    "react-test-renderer": "^17.0.2"
   }
 }
