--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ DAILY_SNEAK_PEAK_BACKEND_PORT=5000
 
 DAILY_SNEAK_PEAK_DB_USER=user
 DAILY_SNEAK_PEAK_DB_PASSWORD=password
+DAILY_SNEAK_PEAK_DB_NAME=daily_sneak_peak_development|production
