--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "http-errors": "^1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3"
   }
